--- a/index.html
+++ b/index.html
@@ -173,10 +173,16 @@
             Build boards, rally teams, and dive into OSRS clan events. Pick your game mode below.
           </p>
         </div>
-        <a href="tiletrials.html" class="btn-bronze mt-4 md:mt-0 inline-flex items-center gap-2">
-          Open Tile Trials Editor
-          <span aria-hidden="true">→</span>
-        </a>
+        <div class="flex items-center gap-3 mt-4 md:mt-0">
+          <a href="tiletrials.html" class="btn-bronze inline-flex items-center gap-2">
+            Open Tile Trials Editor
+            <span aria-hidden="true">→</span>
+          </a>
+          <a href="nexusofnodes.html" class="btn-bronze inline-flex items-center gap-2">
+            Open Nexus of Nodes Editor
+            <span aria-hidden="true">→</span>
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -212,17 +218,17 @@
         </div>
       </a>
 
-      <!-- Nexus of Nodes (placeholder) -->
-      <a href="#" data-soon class="panel-medieval event-card p-5 block cursor-pointer focus:outline-none focus-visible:ring-4 focus-visible:ring-indigo-300/60">
+      <!-- Nexus of Nodes (now live) -->
+      <a href="nexusofnodes.html" class="panel-medieval event-card p-5 block focus:outline-none focus-visible:ring-4 focus-visible:ring-indigo-300/60">
         <div class="flex items-start justify-between gap-4">
           <h3 class="heading-medieval text-xl">Nexus of Nodes</h3>
-          <span class="text-xs font-semibold bg-slate-500 text-white rounded-md px-2.5 py-1 shadow">Soon</span>
+          <span class="text-xs font-semibold bg-emerald-600 text-white rounded-md px-2.5 py-1 shadow">Ready</span>
         </div>
         <p class="mt-3 text-sm text-slate-700">
           Branching task tree: clear nodes to unlock tougher paths and rack up points.
         </p>
         <div class="mt-4">
-          <span class="btn-bronze inline-block opacity-70">Preview</span>
+          <span class="btn-bronze inline-block">Open</span>
         </div>
       </a>
 
